# Cuda_Mining_Lib

./: CMakeLists.txt  README.md
include/: mining.h
src/: mining.cu
